Faster loading of items in lightbox when loaded from dashboard. offwhite labels for dashboard buttons to avoid invisible buttons while images load

--- a/public/stylesheets/gt-styles.css
+++ b/public/stylesheets/gt-styles.css
@@ -1215,7 +1215,7 @@ div.activity-tag {
 	text-align:center;
 	vertical-align:middle;
 	cursor:pointer;
-	color: #fff;
+	color: #ddd;
 	float: right;
 	display: inline;
 }
